# MinimalQml

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
